fix z-index

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -12,7 +12,7 @@
     -webkit-box-shadow: 0px -5px 8px 0px rgba(0, 0, 0, 1);
     -moz-box-shadow: 0px -5px 8px 0px rgba(0, 0, 0, 1);
     box-shadow: 0px -5px 8px 0px rgba(0, 0, 0, 1);
-    z-index: 2;
+    z-index: 3;
 }
 
 .HeaderMenu {
